# pivx-agent-kit

./: Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
src/: checkpoint.rs  core.rs  keys.rs  main.rs  mcp.rs  network.rs  prover.rs  shield.rs  sync.rs  updater.rs  wallet.rs
src/cards/: client.rs  commands.rs  mod.rs  state.rs
src/task/: client.rs  commands.rs  mod.rs  state.rs
