[package]
name = "pivx-agent-kit"
version = "0.6.0"
edition = "2021"
description = "PIVX Agent Kit – CLI toolbox for AI agents to interact with the PIVX blockchain"
repository = "https://github.com/PIVX-Labs/pivx-agent-kit"
license = "MIT"

[[bin]]
name = "pivx-agent-kit"
path = "src/main.rs"

[dependencies]
# Shared PIVX wallet core — keys, sapling, tx builders, sync logic, wallet state.
# Pinned to a specific commit for reproducible release builds. Bump the rev
# when you need a new wallet-kit feature; CI will rebuild against the new pin.
pivx-wallet-kit = { git = "https://github.com/PIVX-Labs/pivx-wallet-kit", rev = "a433c1c" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# BIP39 mnemonic parsing (used by the export/verify path in wallet.rs).
bip39 = "2"

# HTTP client (blocking, no async runtime needed)
ureq = "2"

# Cryptographic utilities still needed at the CLI layer for device-bound key derivation.
sha2 = "0.10"
zeroize = { version = "1.8", features = ["derive"] }

# System
dirs = "5"
machine-uid = "0.5"
rand_core = { version = "0.6", features = ["std"] }

[patch.crates-io]
orchard = { git = "https://github.com/zcash/orchard.git", rev = "c684e9185a0449efb00428f807d3bf286b5dae03" }
redjubjub = { git = "https://github.com/ZcashFoundation/redjubjub", rev = "eae848c5c14d9c795d000dd9f4c4762d1aee7ee1" }
bellman = { git = "https://github.com/Duddino/librustpivx", branch = "librustzcash-rebase" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
